--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,9 +7,13 @@
     <script src="scripts/week4.js"></script>
   </head>
   <body>
-    <h1>Week 4 Assignment</h1>
-    <p>See console for output.</p>
-    <!-- Create an unordered list with any questions you have -->
+    <header style="background-color: blue">
+        
+        <h1>Week 4 Assignment</h1>
+        <p>See console for output.</p>
+        <!-- Create an unordered list with any questions you have -->
+
+    </header>
   </body>
 </html>
 
