--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,12 +8,15 @@
   </head>
   <body>
     <header style="background-color: blue">
-        
+
         <h1>Week 4 Assignment</h1>
         <p>See console for output.</p>
         <!-- Create an unordered list with any questions you have -->
-
     </header>
+    <div class="info">
+<h2></h2>
+    </div>
+
   </body>
 </html>
 
