--- a/assignment/index.html
+++ b/assignment/index.html
@@ -14,7 +14,9 @@
         <!-- Create an unordered list with any questions you have -->
     </header>
     <div class="info">
-<h2></h2>
+<h2 style ="background-color: green">
+My name is Jacob Brenke
+</h2>
     </div>
 
   </body>
