Adds h3 with value of my mode of transporation

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -19,6 +19,10 @@ My name is Jacob Brenke
 </h2>
     </div>
 
+<h3>
+My mode of transporation is a Red Volkswagon Jetta Wagon 5-Speed Manual!
+</h3>
+
   </body>
 </html>
 
