--- a/assignment/index.html
+++ b/assignment/index.html
@@ -18,11 +18,11 @@
 My name is Jacob Brenke
 </h2>
     </div>
-
+<div class="cartype">
 <h3>
 My mode of transporation is a Red Volkswagon Jetta Wagon 5-Speed Manual!
 </h3>
-
+</div>
   </body>
 </html>
 
