Adds in img of my vehicle.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -23,6 +23,7 @@ My name is Jacob Brenke
 My mode of transporation is a Red Volkswagon Jetta Wagon 5-Speed Manual!
 </h3>
 </div>
+<img src="http://www.stationwagon.com/2001_models/2001_VW_Jetta.jpg"></img>
   </body>
 </html>
 
